# glyph

./: .codeclimate.yml  .codecov.yml  .environment.yml  .gitattributes  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements-to-freeze.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: .environment.yml  Makefile  make_envyml.py
doc/source/: api.rst  concepts.md  conf.py  index.rst  roadmap.md
examples/: README.txt  auto_grad.py  control_problem.py  damped_oscillator.py  dask_app.py  harmonic_oscillator.py  logging.yaml  lorenz.py  minimal_example.py  nd_example.py  structural_constants.py  symbolic_regression.py  symbolic_regression_motifs.py  symbolic_regression_simplification.py
examples/control/: bug.py  control_problem.py  damped_oscillator.py  harmonic_oscillator.py  joblib_app.py  lorenz.py  minimal_example.py
examples/remote/: build_pset.py  dummy.py  dummy_reply.py  experiment.py  experiment_dummy.py  experiment_multi_objective.py  experiment_whatever.py  run_remote.sh
examples/symbolic_regression/: README.txt  linear_transformation_leaf.py  motifs.py  multiple_output.py  observer.py  simplification.py  structural_constants.py  symbolic_regression.py
glyph/: __init__.py  _version.py  application.py  assessment.py  control_problem.py  observer.py
glyph/cli/: __init__.py  _parser.py  (+2 more)
tests/: conftest.py
(+49 files in other folders)
